# go-cqhttp

./: .env.dev  pyproject.toml
cmd/gocq/: main.go
global/terminal/: double_click_windows.go
modules/config/: config.go  default_config.yml
server/: websocket.go
