[project]
name = "jx3"
version = "0.1.0"
description = "jx3"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = ["nonebot2>=2.2.1", "nonebot-adapter-onebot>=2.4.3", "nonebot-adapter-console>=0.5.0", "nonebot-plugin-apscheduler>=0.4.0", "ffmpeg>=1.4", "ffmpeg-python>=0.2.0", "tencentcloud-sdk-python>=3.0.1286", "pyppeteer>=2.0.0", "configobj>=5.0.9", "beautifulsoup4>=4.12.3", "jinja2>=3.1.5", "requests>=2.32.3", "nonebot2[fastapi]>=2.2.1"]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]

[tool.poetry]
name = "jx3"
version = "0.1.1"
description = "1234"
authors = ["1234"]
license = "1234"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
nonebot2 = {extras = ["fastapi"], version = "^2.4.0"}
nonebot-adapter-onebot = "^2.4.6"
nonebot-adapter-console = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
